# smallwonder

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: privacy.md
scripts/: integration.sh
src/smallwonder/: cli.py  config.py  openwebui.py  openwebui_tool.py  preflight.py  tiers.py
src/smallwonder/backends/: base.py  llamaswap.py  lmstudio.py
src/smallwonder/evals/: prompts.yaml  runner.py
src/smallwonder/modules/: image.py  news.py  voice.py
src/smallwonder/services/: launchd.py  stack.py
src/smallwonder/shim/: dt_openai_shim.py
src/smallwonder/templates/: auto_router.json.j2  launchd.plist.j2  litellm.yaml.j2  llama-swap.yaml.j2
tests/: test_config.py  test_evals.py  test_preflight.py  test_services.py  test_shim.py  test_templates.py  test_tiers.py  test_tool_content.py  test_voice.py
